# MatGraphDB

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  chargemol_debug.txt  config.yml  dev_env.yml  env.yml  env_dev.yml  env_linux.yml  env_linux_graph-tool.yml  env_win.yml  failed_calcs.md  my_env.yml  neo4j_import_command.md  poscar  pyproject.toml  pyrightconfig.json  requirements.txt  run_analysis_debug.txt  run_bonding_analysis_debug.txt  run_chargemol_bonding_analysis_debug.txt  run_wyckoff_analysis_debug.txt  sample.yml  setup.py  slurm-689971.out  slurm-689972.out  slurm-690250.out  slurm-690252.out  slurm-767040.out  slurm-878969.out  updated_file.parquet
.github/workflows/: python-publish.yml
data/chem_data/: coordination_geometries.csv
docs/: .buildinfo  CONTRIBUTING.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/01_tutorials/: 01 - Getting Started.html  01 - Getting Started.ipynb  02 - Managing Graphs in MatGraphDB.html  02 - Managing Graphs in MatGraphDB.ipynb  03 - Graph Generators in MatgraphDB.html  index.html
docs/02_internal/: 01 - matgraphdb_internals.html  02 - parquet_file_format.html  index.html
docs/03_api/: index.html
docs/_sources/: CONTRIBUTING.rst.txt  index.rst.txt
docs/examples/: index.html
docs/source/: conf.py  index.rst
examples/: index.rst
examples/01_tutorials/: 02 - Managing Graphs in MatGraphDB.ipynb
examples/02_applications/: 01 - MPNearHull Dataset.ipynb  index.rst
examples/matgraphdb/: Example 1 - Database Management.py  tmp.py  transfer_old_database_to new.py  transfer_old_database_to_new.py
examples/notebooks/: 01 - Getting Started.ipynb  Example 1 - Introduction to MatGraphDB.ipynb  Example 2 - Managing Graphs in MatGraphDB.ipynb  Example 3 - Graph Generators in MatgraphDB.ipynb  example_transductive_heterosage.ipynb
examples/parquet_files/: test_pydict.parquet
examples/pytorch_geometric_hetero/: hierarchical_sage.py  supervised_hetero_gat.py  supervised_hetero_gcn.py  supervised_hetero_han.py  supervised_hetero_sage.py  supervised_mlp.py  test.py
examples/sandbox/: extract_element_properties.py  pymongo_test.py  pytorch_mnist.py  test.py
examples/scripts/: Example-1_creating_hetero_graph.py  Example-2_creating_hetero_graph_w_basis.py  Example-3-2_element_feature_propagation_experiment.py  Example-3-3_element_feature_propagation_plotting.py  Example-3-4_element_feature_propagation_plotting.py  Example-3-5_element_feature_plotting.py  Example-3_element_feature_propagation.py  Example-4_element_feature_propagation_experiment.py  base_metrics.json  chemenv_element_neo4j_node_embedding.py  imputed_periodic_table_values.csv  large_cosine_similarity.py  neo4j_node_embedding.py  similarity_network.py
logs/: run_wyckoff_analysis_debug.txt
matgraphdb/: __init__.py  _version.py  core.py  matgraphdb.py
matgraphdb/app/: test.py
matgraphdb/calculations/: README.md  job_scheduler_generator.py  parsers.py  slurm_job_launcher.py
matgraphdb/core/: README.md  __init__.py  core.py  database.py  edge_store.py  edges.py  generator_store.py  graph_db.py  graphs.py  material_store.py  matgraphdb.py  matgraphdb_base.py  node_store.py  nodes.py  voronoi_structure.py
matgraphdb/data/: __init__.py  calc_manager.py  checks.py  database.py  download.py  manager.py  matdb.py  material_manager.py  parquet_schemas.py  utils.py
matgraphdb/database/: utils.py
matgraphdb/datasets/: __init__.py  mp_near_hull.py
matgraphdb/generators/: __init__.py  nodes.py
matgraphdb/graph/: create_graphs.py  create_node_csv.py  create_relationship_csv.py  graph.py  graph_database.py  graph_generator.py  graph_tool_analyzer.py  material_graph.py  neo4j_analysis.py  neo4j_experiment_manager.py  neo4j_gds_manager.py  neo4j_manager.py  node_types.py  similarity_chat.py  types.py  utils.py
matgraphdb/graph_kit/: data.py  graph_manager.py  graphs.py  metadata.py  nodes.py  relationships.py  utils.py
matgraphdb/materials/: __init__.py  core.py  edges.py
matgraphdb/mlcore/: callbacks.py  datasets.py  encoders.py  graph_models.py  graph_trainer.py  loss.py  metrics.py  models.py  plot_metrics.py  trainer.py
matgraphdb/pyg/: __init__.py  builder.py
matgraphdb/stores/: __init__.py  edge_store.py  graph_store.py  material_store.py  node_store.py  utils.py
matgraphdb/utils/: __init__.py  benchmark_utils.py  colors.py  computational_utils.py  config.py  config.yml  coord_geom.py  core_utils.py  file_utils.py  general.py  general_utils.py  imputed_periodic_table_values.csv  log_config.py  log_utils.py  math.py  math_utils.py  model_io.py  mp_utils.py  multiprocess_utils.py  parquet_tools.py  periodic_table.py  plot_bond_order.py  plot_graphistry.py  plot_graphs.py  plot_utils.py  plotting.py  shapes.py  timing.py  torch_utils.py
mlruns/0/: meta.yaml
mlruns/209372273272212547/: meta.yaml
notebooks/: Neo4j_Node_Embeddings_and_ML.ipynb
notes/: EdgeStore_NodeStore_GraphStore.md  MaterialRepositroyHandler.md  QUESTIONS.md  general.md  neo4j_import_command.md  old_TODO.md  thoughts.md
poly_graphs_lib/: __init__.py  callbacks.py  create_face_edge_features.py  encoder.py  model_pipeline.py  poly_dataset.py  poly_featurizer.py  poly_graph_model.py  poly_pair_model.py  pyg-json_dataset.py  utils.py
poly_graphs_lib/app/: test.py
reports/: cosine_similarity.csv  distance_similarity.csv  encodings.csv  energy_test.csv  three_body_enery.pptx
sandbox/: _edge_store.py  analysis.py  config.yml  edge_generator_store.py  tmp.py
scripts/: run_chargemol.sh  run_pytest_continuously.py  test.py  tmp.py
similarity_model_w_voronoii/: generate_polyhedra_database.py  model_similarity.py  predict_similarity.py
src/: data_pipeline.py  run_cpu.slurm  test.py  trainer.py  trainer_v1.py
tests/: test_edge_generator.py  test_edge_store.py  test_graph_store.py  test_graphdb.py  test_matdb.py  test_material_manager.py  test_material_nodes.py  test_material_store.py  test_matgraphdb.py  test_node_store.py  test_pyg_builder.py
trash/: chemenv_analysis.py  metrics.py  test.py  test_1.py  test_2.py
(+1953 files in other folders)
