[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "matgraphdb"
authors = [
    {name = "Logan Lang", email = "lllang@mix.wvu.edu"}
]
description = "Welcome to MatGraphDB, a powerful Python package designed to interface with primary and graph databases for advanced material analysis."
readme = {file = "README.md", content-type = "text/markdown"}  # Ensure this matches the file used
requires-python = ">=3.8"
keywords = ["materials", "science", "graph", "database", "python"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    'coxeter',
    'crystals',
    'mendeleev',
    'pymatgen',
    'numpy',
    'scipy',
    'pyyaml',
    'matplotlib',
    'setuptools_scm'
]

dynamic = ["version", "dependencies", "optional-dependencies"]


[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/lllangWV/MatGraphDB"
Issues = "https://github.com/lllangWV/MatGraphDB/issues"
Changelog = "https://github.com/lllangWV/MatGraphDB/CHANGELOG.md"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt"] }


[tool.setuptools.packages.find]
where = ["."]
include = ["matgraphdb*"]
exclude = ["matgraphdb.tests*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
version_file = "pkg/_version.py"
