[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
local_scheme="no-local-version"
version_file = "matgraphdb/_version.py"


[project]
name = "matgraphdb"
authors = [
    {name = "Logan Lang", email = "lllang@mix.wvu.edu"}
]
description = "Welcome to MatGraphDB, a powerful Python package designed to interface with primary and graph databases for advanced material analysis."
readme = {file = "README.md", content-type = "text/markdown"}  # Ensure this matches the file used
requires-python = ">=3.8"
keywords = ["materials", "science", "graph", "database", "python"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]

dynamic = ["version"]

dependencies = [
    "python-dotenv",
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
    "pyyaml",
    "pymatgen",
    "parquetdb",
    "variconfig",
    "huggingface_hub[cli]",
]

[project.optional-dependencies]



ml = [
    "torch",
    "torchvision",
    "torchaudio",
    "torch_geometric",
]

tests = [
    "pytest",
    "pytest-cov",
    "matgraphdb[ml]"
]

graph-tool = [
    "graph-tool; platform_system == 'Linux'"
]

neo4j = [
    "neo4j",
]

materials=[
    "ase",
    "mendeleev",
    "matminer",
    "coxeter",
    "crystals",
]


docs= [
    "ipython",
    "imageio-ffmpeg",
    "sphinx", 
    "sphinx_rtd_theme",
    "sphinx-copybutton",
    "nbsphinx",
    "sphinx_design",
    "sphinx-new-tab-link",
    "sphinxcontrib-youtube",
    "sphinxcontrib-video",
    "pandoc",
    "furo",
    "numpydoc"
]


dev = [
    "pymongo",
    "pytest",
    "mlflow",
    "ipywidgets",
    "jupyterlab",
    "nglview",
    "pylint",
    "autopep8",
    "openai",
    "python-dotenv",
    "PyGithub",
    "pytest-cov",
    "ipython",
    "imageio-ffmpeg",
    "sphinx", 
    "sphinx_rtd_theme",
    "sphinx-copybutton",
    "nbsphinx",
    "sphinx_design",
    "sphinx-new-tab-link",
    "sphinxcontrib-youtube",
    "sphinxcontrib-video",
    "pandoc",
    "furo",
    "numpydoc"
]



[project.urls]
Repository = "https://github.com/romerogroup/MatGraphDB"
Issues = "https://github.com/romerogroup/MatGraphDB/issues"
Changelog = "https://github.com/romerogroup/MatGraphDB/CHANGELOG.md"




[tool.setuptools.packages.find]
where = ["."]
include = ["matgraphdb*"]
exclude = ["matgraphdb.tests*"]


[tool.setuptools.package-data]
matgraphdb = ["**/*.json", "**/*.csv", "**/*.yml", "**/*.parquet"]
# include = ["matgraphdb"]
# exclude = ["matgraphdb.tests"]

